<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground"
              android:weightSum="10"
              android:gravity="center"
              android:scaleType="fitXY">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:text="@string/title_oration_ws"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/paragraph_ws"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/get_start"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/black"
        android:text="@string/bt_getStarted"
        android:layout_gravity="center"
        android:textColor="#fff" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/paragraph2_ws"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textSize="14sp"

            />

        <TextView
            android:id="@+id/flat_singIn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="7dp"
            android:text="@string/flat_bt_signUp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"

            />
    </LinearLayout>


</LinearLayout>
